--- a/style.css
+++ b/style.css
@@ -10,7 +10,10 @@
     width: 95%;
     max-width: 1200px;
     margin: 0 auto;
-    margin-top: 20vh;
+    margin-top: 50vh;
+    /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); */
+    padding: 1em;
+    width: 600px;
 }
 
 .title {
@@ -50,20 +53,16 @@ select {
 /* ==================== BUTTON ==================== */
 
 #calculate-btn {
-    padding: 0.8em 2em;
-    display: block;
-    margin: 0 auto;
+    padding: 0.5em 2em;
     outline: none;
     border-radius: 40px;
     background: #fff;
     border: 2px solid #1ECD97;
     color: #1ECD97;
-    letter-spacing: 1px;
-    text-shadow: 0;
-    font-weight: bold;
     cursor: pointer;
     -webkit-transition: all 0.25s ease;
     transition: all 0.25s ease;
+    margin-left: 2em;
 }
 
 #calculate-btn:hover {
@@ -73,4 +72,14 @@ select {
 
 #calculate-btn:active {
     letter-spacing: 2px;
+}
+
+.searchField {
+    border: 1px solid #888;
+    border-radius: 300px;
+    padding: 0.5em 1.5em;
+}
+
+.transportation {
+    padding: 1em;
 }
