--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,33 +1,52 @@
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 .hero {
-    width: 100%;
     height: 100vh;
-    overflow: hidden;
 }
 
 .darker {
-    width: 100%;
     height: 100vh;
-    /* background: url("../images/black.jpg") center no-repeat; */
-    /* background-size: cover; */
-    clear: both;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
-.hero img {
-    width: 100%;
+.hero img,
+.slide-container {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+}
+
+.slick-dots {
+    position: absolute;
+    bottom: 40px;
+    left: 0;
+    right: 0;
+}
+
+.hero .desc {
+    text-align: center;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 200px;
+    line-height: 250px;
+    position: absolute;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 1)));
+    text-align: center;
+    color: white;
 }
 
 .bullets {
     position: absolute;
     bottom: 30px;
+    top: default;
     left: 0;
     right: 0;
 }
 
 .bullet {
     width: 0.5em;
-    height:0.5em;
+    height: 0.5em;
     display: inline-block;
     border-radius: 100%;
     border: 0.18em solid #fff;
