--- a/src/styles/trip.css
+++ b/src/styles/trip.css
@@ -2,25 +2,20 @@
             TIMELINE
 **************************************************************************************************** */
 
-* {}
-
-.event {
-    display: inline-block;
-}
-
 .timeline {
-    margin-top: 20vh;
     text-align: center;
+    /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); */
+    height: 200px;
+    margin: 2em 0;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    height: 100px;
 }
 
 .timeline .line {
-    width: 8em;
+    width: 10em;
     height: 0.5em;
     background-color: #444;
     display: inline-block;
-    margin-bottom: 0.745em;
+    margin: 6em 0;
     position: relative;
 }
 
@@ -40,28 +35,33 @@
     background-color: #fff;
     border: 0.4em solid red;
     border-radius: 100%;
-    position: relative;
     display: inline-block;
+    position: relative;
+    margin: 5.25em 0;
 }
 
 .timeline .title {
-    margin: 0;
-    display: inline;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     font-weight: bold;
     padding: 0.5em;
     background-color: #eee;
     position: absolute;
     bottom: 35px;
-    left: -60px;
-    right: -60px;
+    left: -65px;
+    right: -65px;
+    border-radius: 25px;
+    -webkit-transition: all 0.25s ease;
+    transition: all 0.25s ease;
 }
 
-.timeline .date {
-    margin: 0;
+.timeline .title:hover {
+    letter-spacing: 0.15em;
     color: red;
-    display: inline;
-    font-size: 0.8em;
+}
+
+.timeline a {
+    color: black;
+    text-decoration: none;
 }
 
 .timeline .info {
@@ -69,5 +69,9 @@
     top: 15px;
     left: 0;
     right: 0;
-    border: 1px solid red;
+}
+
+.timeline .fa {
+    font-size: 1.1em;
+    color: #aaa;
 }
