--- a/src/app.style.css
+++ b/src/app.style.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700'); */
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
 
 * {
     margin: 0;
@@ -23,9 +23,9 @@ body {
 }
 
 .space.bottom {
-    margin-bottom: 20px;
+    margin-bottom: 1em;
 }
 
 .space.top {
-    margin-top: 20px;
+    margin-top: 1em;
 }
