--- a/src/components/navbar.style.css
+++ b/src/components/navbar.style.css
@@ -11,11 +11,12 @@
     left: 0;
 }
 
-.logo {
+.navbar .logo {
     float: left;
     color: #fff;
     margin: 0.5em 0 0 0;
     padding: 0;
+    text-decoration: none;
 }
 
 .navbar .list {
@@ -24,10 +25,8 @@
 
 .navbar .list .item {
     color: #fff;
-    /* padding: 1em 0 1em 0; */
     padding: 1em;
     margin: 0;
-    /* margin-left: 3em; */
     display: inline-block;
     font-weight: bold;
     letter-spacing: 0.08em;
@@ -41,11 +40,6 @@
 }
 
 .navbar .list .item:hover {
-    color: #ff8500;
     background-color: #fff;
     color: #000;
-}
-
-.navbar .list .item.active {
-    color: #ff8500;
 }
