--- a/src/views/destinations.style.css
+++ b/src/views/destinations.style.css
@@ -1,9 +1,14 @@
+/* ****************************************************************************************************
+            DESTINATIONS
+**************************************************************************************************** */
+
 .destinations .card {
     display: inline-block;
     height: 250px;
     margin: 1%;
     position: relative;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    border-radius: 3px;
 }
 
 .destinations .large {
@@ -18,6 +23,7 @@
     object-fit: cover;
     width: 100%;
     height: 250px;
+    border-radius: 3px;
 }
 
 .destinations .card .desc {
@@ -35,6 +41,7 @@
     font-size: 2em;
     line-height: 250px;
     text-align: center;
+    border-radius: 3px;
 }
 
 .destinations .card .desc:hover {
