--- a/src/views/trip.style.css
+++ b/src/views/trip.style.css
@@ -1,5 +1,5 @@
 /* ****************************************************************************************************
-            TIMELINE
+            TRIP
 **************************************************************************************************** */
 
 .timeline {
@@ -8,6 +8,7 @@
     height: 200px;
     margin: 2em 0;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    border-radius: 3px;
 }
 
 .timeline .line {
