Added dijkstra script

--- a/src/views/destination.style.css
+++ b/src/views/destination.style.css
@@ -1,5 +1,5 @@
 /* ****************************************************************************************************
-DESTINATION
+            DESTINATION
 **************************************************************************************************** */
 
 .small-hero {
@@ -44,8 +44,8 @@ DESTINATION
     display: table;
     clear: both;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    padding: 2em 2em 0 2em;
-    margin-block-end: 2em;
+    /* padding: 2em 2em 0 2em; */
+    margin-bottom: 2em;
     border-radius: 3px;
 }
 
@@ -59,15 +59,14 @@ DESTINATION
     width: 400px;
     height: 300px;
     position: relative;
+    margin: 2em;
 }
 
 .destination .section .card.left {
-    margin: 0 2em 2em 0;
     float: left;
 }
 
 .destination .section .card.right {
-    margin: 0 0 2em 2em;
     float: right;
 }
 
@@ -94,6 +93,10 @@ DESTINATION
     color: white;
     font-size: 2em;
     border-radius: 3px;
+}
+
+.destination .content {
+    margin: 2em;
 }
 
 .destination .section .card .desc:hover {
