--- a/src/views/destination.style.css
+++ b/src/views/destination.style.css
@@ -60,14 +60,15 @@
     height: 300px;
     position: relative;
     margin: 2em;
-}
-
-.destination .section .card.left {
     float: left;
 }
 
-.destination .section .card.right {
+.destination .section:nth-child(even) .card {
     float: right;
+}
+
+.destination .section.left .card {
+    float: left;
 }
 
 .destination .section .card img {
