--- a/src/views/about.style.css
+++ b/src/views/about.style.css
@@ -74,7 +74,7 @@
 .half .fa {
     font-size: 4em;
     color: rgba(0, 0, 0, 0.6);
-    margin: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 .half .second-half-title {
