--- a/client-react/src/views/destination.style.css
+++ b/client-react/src/views/destination.style.css
@@ -6,12 +6,14 @@
     width: 100%;
     height: 50vh;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    overflow: hidden;
 }
 
 .small-hero .bg {
     width: 100%;
-    height: 50vh;
+    /* height: 50vh; */
     object-fit: conver;
+    /* overflow: hidden; */
 }
 
 .small-hero .title {
